Uppercase lowercase issue fix, adding local swagger-ui (#2)

--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "validate:original": "swagger-cli validate src/openapi.yaml",
     "validate:bundled": "swagger-cli validate out/definition/openapi.yaml",
     "bundle": "swagger-cli bundle src/openapi.yaml -o out/definition/openapi.yaml -t yaml",
-    "generate:csharp-netcore": "openapi-generator-cli generate -i out/definition/openapi.yaml -g csharp-netcore -o out/code/csharp-netcore -c config/csharp-netcore.json"
+    "generate:csharp-netcore": "openapi-generator-cli generate -i out/definition/openapi.yaml -g csharp-netcore -o out/code/csharp-netcore -c config/csharp-netcore.json",
+    "swagger-ui": "http-server --cors",
+    "test": "start http://localhost:8080"
   },
   "devDependencies": {
     "@apidevtools/swagger-cli": "^4.0.4",
-    "@openapitools/openapi-generator-cli": "^2.4.21"
+    "@openapitools/openapi-generator-cli": "^2.4.21",
+    "http-server": "^14.0.0"
   },
   "srcHash": "6c787d2a6ad6f92f6978bc2b6d0bfce0"
 }
